--- a/arch/arm/configs/supersonic_defconfig
+++ b/arch/arm/configs/supersonic_defconfig
@@ -1,7 +1,7 @@
-
+#
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.29
-# Thu Oct  8 01:00:04 2009
+# Sat Jun 19 00:43:11 2010
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -33,8 +33,8 @@ CONFIG_EXPERIMENTAL=y
 CONFIG_BROKEN_ON_SMP=y
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
-CONFIG_LOCALVERSION=""
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="-a2443432"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
@@ -176,12 +176,25 @@ CONFIG_FREEZER=y
 CONFIG_ARCH_MSM=y
 # CONFIG_ARCH_W90X900 is not set
 # CONFIG_ARCH_MSM7X00A is not set
+# CONFIG_ARCH_MSM7225 is not set
+# CONFIG_ARCH_MSM7227 is not set
 CONFIG_ARCH_QSD8X50=y
 CONFIG_ARCH_MSM_SCORPION=y
 CONFIG_MSM_MDP31=y
+CONFIG_PERFLOCK=y
+CONFIG_PERFLOCK_BOOT_LOCK=y
+# CONFIG_PERFLOCK_SCREEN_POLICY is not set
 CONFIG_MSM_AMSS_VERSION=3200
+# CONFIG_MSM_AMSS_VERSION_6210 is not set
+# CONFIG_MSM_AMSS_VERSION_6220 is not set
+# CONFIG_MSM_AMSS_VERSION_6225 is not set
+# CONFIG_MSM_AMSS_VERSION_6350 is not set
+# CONFIG_MSM_AMSS_VERSION_6355 is not set
+# CONFIG_MSM_AMSS_VERSION_1355 is not set
+# CONFIG_MSM_AMSS_VERSION_4725 is not set
+# CONFIG_MSM_AMSS_VERSION_4735 is not set
+# CONFIG_MSM_AMSS_VERSION_4410 is not set
 CONFIG_MSM_AMSS_VERSION_3200=y
-# CONFIG_MSM_DEBUG_UART is not set
 CONFIG_MSM_DEBUG_UART_NONE=y
 # CONFIG_MSM_DEBUG_UART1 is not set
 # CONFIG_MSM_DEBUG_UART2 is not set
@@ -193,21 +206,20 @@ CONFIG_MSM_DEBUG_UART_NONE=y
 # CONFIG_MACH_SWORDFISH is not set
 # CONFIG_MACH_FIRESTONE is not set
 # CONFIG_MACH_ORCA is not set
-# CONFIG_MACH_BRAVO is not set
 # CONFIG_MACH_MAHIMAHI is not set
+# CONFIG_MACH_BRAVO is not set
+# CONFIG_MACH_PASSIONC is not set
+# CONFIG_MACH_BRAVOC is not set
 # CONFIG_MACH_INCREDIBLE is not set
 # CONFIG_MACH_INCREDIBLEC is not set
-# CONFIG_MACH_PASSIONC is not set
 CONFIG_MACH_SUPERSONIC=y
-CONFIG_HTC_HEADSET=y
-CONFIG_HTC_35MM_REMOTE=y
-CONFIG_HTC_AUDIOJACK=y
-CONFIG_MICROP_COMMON=y
-CONFIG_LIGHTSENSOR_MICROP=y
 # CONFIG_TROUT_BATTCHG is not set
 CONFIG_HTC_BATTCHG=y
 CONFIG_HTC_BATTCHG_SMEM=y
 # CONFIG_HTC_PWRSINK is not set
+CONFIG_HTC_SLEEP_MODE_GPIO_DUMP=y
+# CONFIG_HTC_POWER_COLLAPSE_MAGIC is not set
+CONFIG_BUILD_OMA_DM=y
 CONFIG_CACHE_FLUSH_RANGE_LIMIT=0x40000
 CONFIG_MSM7X00A_USE_GP_TIMER=y
 # CONFIG_MSM7X00A_USE_DG_TIMER is not set
@@ -246,24 +258,32 @@ CONFIG_MSM_SMD=y
 CONFIG_MSM_N_WAY_SMD=y
 CONFIG_MSM_ONCRPCROUTER=y
 CONFIG_MSM_RPCSERVERS=y
+CONFIG_MSM_DALRPC=y
+# CONFIG_MSM_DALRPC_TEST is not set
 # CONFIG_MSM_CPU_FREQ_SCREEN is not set
 CONFIG_MSM_CPU_FREQ_ONDEMAND_MAX=998400
 CONFIG_MSM_CPU_FREQ_ONDEMAND_MIN=245000
 # CONFIG_MSM_HW3D is not set
-# CONFIG_MSM_ADSP is not set
 # CONFIG_HTC_ACOUSTIC is not set
 CONFIG_HTC_ACOUSTIC_QSD=y
-CONFIG_MSM_DALRPC=y
-# CONFIG_MSM_DALRPC_TEST is not set
+# CONFIG_MSM_CLOCK_CTRL_DEBUG is not set
+CONFIG_HTC_HEADSET=y
+CONFIG_HTC_AUDIOJACK=y
+CONFIG_WIFI_CONTROL_FUNC=y
+# CONFIG_WIFI_MEM_PREALLOC is not set
+CONFIG_WIFI_NVS_PROC_CREATE=y
+# CONFIG_MMC_SUPPORT_EXTERNEL_DRIVER is not set
+CONFIG_MMC_BUSCLK_PWRSAVE=y
+CONFIG_VIRTUAL_KPANIC_PARTITION=y
 CONFIG_QSD_AUDIO=y
+CONFIG_VIRTUAL_KPANIC_PSIZE=1048576
 CONFIG_QSD_HTC_FM=y
 CONFIG_ARCH_MSM_FLASHLIGHT=y
-CONFIG_WIFI_NVS_PROC_CREATE=y
-CONFIG_WIFI_CONTROL_FUNC=y
-CONFIG_WIFI_MEM_PREALLOC=n
+CONFIG_VIRTUAL_KPANIC_SRC="cache"
+CONFIG_MICROP_COMMON=y
 CONFIG_BUILD_CIQ=y
-CONFIG_BUILD_OMA_DM=y
 CONFIG_SMD_OFFSET_TCXO_STAT=0xFC2A0
+# CONFIG_AXI_SCREEN_POLICY is not set
 
 #
 # Processor Type
@@ -278,6 +298,7 @@ CONFIG_CPU_CACHE_V7=y
 CONFIG_CPU_CACHE_VIPT=y
 CONFIG_CPU_COPY_V6=y
 CONFIG_CPU_TLB_V7=y
+CONFIG_VERIFY_PERMISSION_FAULT=y
 CONFIG_CPU_HAS_ASID=y
 CONFIG_CPU_CP15=y
 CONFIG_CPU_CP15_MMU=y
@@ -289,9 +310,11 @@ CONFIG_ARM_THUMB=y
 CONFIG_ARM_THUMBEE=y
 # CONFIG_CPU_ICACHE_DISABLE is not set
 # CONFIG_CPU_DCACHE_DISABLE is not set
+CONFIG_CPU_CACHE_ERR_REPORT=y
 # CONFIG_CPU_BPREDICT_DISABLE is not set
 CONFIG_HAS_TLS_REG=y
 # CONFIG_OUTER_CACHE is not set
+CONFIG_ARM_L1_CACHE_SHIFT=5
 
 #
 # Bus support
@@ -315,7 +338,7 @@ CONFIG_PREEMPT=y
 CONFIG_HZ=100
 CONFIG_AEABI=y
 # CONFIG_OABI_COMPAT is not set
-CONFIG_ARCH_FLATMEM_HAS_HOLES=y
+CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
 # CONFIG_ARCH_SPARSEMEM_DEFAULT is not set
 # CONFIG_ARCH_SELECT_MEMORY_MODEL is not set
 CONFIG_SELECT_MEMORY_MODEL=y
@@ -363,13 +386,6 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_MIN_TICKS=2
 CONFIG_CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER=500
 # CONFIG_CPU_IDLE is not set
-CONFIG_PERFLOCK=y
-CONFIG_PERFLOCK_BOOT_LOCK=y
-# CONFIG_PERFLOCK_SCREEN_POLICY is not set
-# CONFIG_PERFLOCK_SCREEN_ON_MIN is not set
-# CONFIG_PERFLOCK_SCREEN_ON_MAX is not set
-# CONFIG_PERFLOCK_SCREEN_OFF_MIN is not set
-# CONFIG_PERFLOCK_SCREEN_OFF_MAX is not set
 
 #
 # Floating point emulation
@@ -423,6 +439,7 @@ CONFIG_XFRM=y
 # CONFIG_XFRM_SUB_POLICY is not set
 # CONFIG_XFRM_MIGRATE is not set
 # CONFIG_XFRM_STATISTICS is not set
+CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
 # CONFIG_NET_KEY_MIGRATE is not set
 CONFIG_INET=y
@@ -438,7 +455,7 @@ CONFIG_IP_FIB_HASH=y
 CONFIG_INET_ESP=y
 # CONFIG_INET_IPCOMP is not set
 # CONFIG_INET_XFRM_TUNNEL is not set
-# CONFIG_INET_TUNNEL is not set
+CONFIG_INET_TUNNEL=y
 CONFIG_INET_XFRM_MODE_TRANSPORT=y
 # CONFIG_INET_XFRM_MODE_TUNNEL is not set
 # CONFIG_INET_XFRM_MODE_BEET is not set
@@ -448,7 +465,28 @@ CONFIG_INET_XFRM_MODE_TRANSPORT=y
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_DEFAULT_TCP_CONG="cubic"
 # CONFIG_TCP_MD5SIG is not set
-# CONFIG_IPV6 is not set
+CONFIG_IPV6=y
+CONFIG_IPV6_PRIVACY=y
+CONFIG_IPV6_ROUTER_PREF=y
+CONFIG_IPV6_ROUTE_INFO=y
+CONFIG_IPV6_OPTIMISTIC_DAD=y
+CONFIG_INET6_AH=y
+CONFIG_INET6_ESP=y
+CONFIG_INET6_IPCOMP=y
+CONFIG_IPV6_MIP6=y
+CONFIG_INET6_XFRM_TUNNEL=y
+CONFIG_INET6_TUNNEL=y
+CONFIG_INET6_XFRM_MODE_TRANSPORT=y
+CONFIG_INET6_XFRM_MODE_TUNNEL=y
+CONFIG_INET6_XFRM_MODE_BEET=y
+CONFIG_INET6_XFRM_MODE_ROUTEOPTIMIZATION=y
+CONFIG_IPV6_SIT=y
+CONFIG_IPV6_NDISC_NODETYPE=y
+CONFIG_IPV6_TUNNEL=y
+CONFIG_IPV6_MULTIPLE_TABLES=y
+CONFIG_IPV6_SUBTREES=y
+CONFIG_IPV6_MROUTE=y
+CONFIG_IPV6_PIMSM_V2=y
 CONFIG_ANDROID_PARANOID_NETWORK=y
 # CONFIG_NETWORK_SECMARK is not set
 CONFIG_NETFILTER=y
@@ -458,8 +496,9 @@ CONFIG_NETFILTER_ADVANCED=y
 #
 # Core Netfilter Configuration
 #
+CONFIG_NETFILTER_NETLINK=y
 # CONFIG_NETFILTER_NETLINK_QUEUE is not set
-# CONFIG_NETFILTER_NETLINK_LOG is not set
+CONFIG_NETFILTER_NETLINK_LOG=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CT_ACCT=y
 CONFIG_NF_CONNTRACK_MARK=y
@@ -479,13 +518,16 @@ CONFIG_NF_CONNTRACK_FTP=y
 # CONFIG_NF_CT_NETLINK is not set
 CONFIG_NETFILTER_XTABLES=y
 CONFIG_NETFILTER_XT_TARGET_CLASSIFY=y
+# CONFIG_NETFILTER_XT_TARGET_CONNMARK is not set
+CONFIG_NETFILTER_XT_TARGET_DSCP=y
 CONFIG_NETFILTER_XT_TARGET_MARK=y
-CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
 CONFIG_NETFILTER_XT_TARGET_NFLOG=y
+CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
 CONFIG_NETFILTER_XT_TARGET_NOTRACK=y
 # CONFIG_NETFILTER_XT_TARGET_RATEEST is not set
 CONFIG_NETFILTER_XT_TARGET_TRACE=y
 CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
+CONFIG_NETFILTER_XT_TARGET_TCPOPTSTRIP=y
 CONFIG_NETFILTER_XT_MATCH_COMMENT=y
 CONFIG_NETFILTER_XT_MATCH_CONNBYTES=y
 CONFIG_NETFILTER_XT_MATCH_CONNLIMIT=y
@@ -494,18 +536,21 @@ CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
 CONFIG_NETFILTER_XT_MATCH_DCCP=y
 CONFIG_NETFILTER_XT_MATCH_DSCP=y
 CONFIG_NETFILTER_XT_MATCH_ESP=y
+CONFIG_NETFILTER_XT_MATCH_HASHLIMIT=y
 CONFIG_NETFILTER_XT_MATCH_HELPER=y
 # CONFIG_NETFILTER_XT_MATCH_IPRANGE is not set
 CONFIG_NETFILTER_XT_MATCH_LENGTH=y
 CONFIG_NETFILTER_XT_MATCH_LIMIT=y
 CONFIG_NETFILTER_XT_MATCH_MAC=y
 CONFIG_NETFILTER_XT_MATCH_MARK=y
-# CONFIG_NETFILTER_XT_MATCH_OWNER is not set
 CONFIG_NETFILTER_XT_MATCH_MULTIPORT=y
+# CONFIG_NETFILTER_XT_MATCH_OWNER is not set
+# CONFIG_NETFILTER_XT_MATCH_POLICY is not set
 CONFIG_NETFILTER_XT_MATCH_PKTTYPE=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA=y
 # CONFIG_NETFILTER_XT_MATCH_RATEEST is not set
 CONFIG_NETFILTER_XT_MATCH_REALM=y
+# CONFIG_NETFILTER_XT_MATCH_RECENT is not set
 CONFIG_NETFILTER_XT_MATCH_SCTP=y
 CONFIG_NETFILTER_XT_MATCH_STATE=y
 CONFIG_NETFILTER_XT_MATCH_STATISTIC=y
@@ -513,20 +558,20 @@ CONFIG_NETFILTER_XT_MATCH_STRING=y
 CONFIG_NETFILTER_XT_MATCH_TCPMSS=y
 CONFIG_NETFILTER_XT_MATCH_TIME=y
 CONFIG_NETFILTER_XT_MATCH_U32=y
-CONFIG_NETFILTER_XT_MATCH_HASHLIMIT=y
+# CONFIG_IP_VS is not set
 
 #
 # IP: Netfilter Configuration
 #
+CONFIG_NF_DEFRAG_IPV4=y
 CONFIG_NF_CONNTRACK_IPV4=y
 CONFIG_NF_CONNTRACK_PROC_COMPAT=y
 # CONFIG_IP_NF_QUEUE is not set
 CONFIG_IP_NF_IPTABLES=y
-CONFIG_IP_NF_MATCH_RECENT=y
-CONFIG_IP_NF_MATCH_ECN=y
-CONFIG_IP_NF_MATCH_AH=y
-CONFIG_IP_NF_MATCH_TTL=y
 CONFIG_IP_NF_MATCH_ADDRTYPE=y
+CONFIG_IP_NF_MATCH_AH=y
+CONFIG_IP_NF_MATCH_ECN=y
+CONFIG_IP_NF_MATCH_TTL=y
 CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_TARGET_REJECT=y
 CONFIG_IP_NF_TARGET_LOG=y
@@ -534,8 +579,8 @@ CONFIG_IP_NF_TARGET_LOG=y
 CONFIG_NF_NAT=y
 CONFIG_NF_NAT_NEEDED=y
 CONFIG_IP_NF_TARGET_MASQUERADE=y
-CONFIG_IP_NF_TARGET_REDIRECT=y
 CONFIG_IP_NF_TARGET_NETMAP=y
+CONFIG_IP_NF_TARGET_REDIRECT=y
 # CONFIG_NF_NAT_SNMP_BASIC is not set
 CONFIG_NF_NAT_FTP=y
 # CONFIG_NF_NAT_IRC is not set
@@ -547,6 +592,27 @@ CONFIG_NF_NAT_FTP=y
 # CONFIG_IP_NF_MANGLE is not set
 CONFIG_IP_NF_RAW=y
 # CONFIG_IP_NF_ARPTABLES is not set
+
+#
+# IPv6: Netfilter Configuration
+#
+CONFIG_NF_CONNTRACK_IPV6=y
+CONFIG_IP6_NF_QUEUE=y
+CONFIG_IP6_NF_IPTABLES=y
+CONFIG_IP6_NF_MATCH_AH=y
+CONFIG_IP6_NF_MATCH_EUI64=y
+CONFIG_IP6_NF_MATCH_FRAG=y
+CONFIG_IP6_NF_MATCH_OPTS=y
+CONFIG_IP6_NF_MATCH_HL=y
+CONFIG_IP6_NF_MATCH_IPV6HEADER=y
+CONFIG_IP6_NF_MATCH_MH=y
+CONFIG_IP6_NF_MATCH_RT=y
+CONFIG_IP6_NF_TARGET_LOG=y
+CONFIG_IP6_NF_FILTER=y
+CONFIG_IP6_NF_TARGET_REJECT=y
+CONFIG_IP6_NF_MANGLE=y
+CONFIG_IP6_NF_TARGET_HL=y
+CONFIG_IP6_NF_RAW=y
 # CONFIG_IP_DCCP is not set
 # CONFIG_IP_SCTP is not set
 # CONFIG_TIPC is not set
@@ -563,6 +629,7 @@ CONFIG_IP_NF_RAW=y
 # CONFIG_ECONET is not set
 # CONFIG_WAN_ROUTER is not set
 # CONFIG_NET_SCHED is not set
+CONFIG_NET_CLS_ROUTE=y
 # CONFIG_DCB is not set
 
 #
@@ -593,6 +660,7 @@ CONFIG_BT_HCIUART_LL=y
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_AF_RXRPC is not set
 # CONFIG_PHONET is not set
+CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
 # CONFIG_CFG80211 is not set
 CONFIG_WIRELESS_OLD_REGULATORY=y
@@ -601,6 +669,7 @@ CONFIG_WIRELESS_EXT_SYSFS=y
 # CONFIG_LIB80211 is not set
 # CONFIG_MAC80211 is not set
 CONFIG_WIMAX=y
+CONFIG_WIMAX_DEBUG_LEVEL=8
 CONFIG_RFKILL=y
 # CONFIG_RFKILL_PM is not set
 # CONFIG_RFKILL_INPUT is not set
@@ -676,6 +745,8 @@ CONFIG_MTD_CFI_I2=y
 # Self-contained MTD device drivers
 #
 CONFIG_MTD_MSM_NAND=y
+# CONFIG_MTD_DATAFLASH is not set
+# CONFIG_MTD_M25P80 is not set
 # CONFIG_MTD_SLRAM is not set
 # CONFIG_MTD_PHRAM is not set
 # CONFIG_MTD_MTDRAM is not set
@@ -713,14 +784,18 @@ CONFIG_ANDROID_PMEM=y
 # CONFIG_ENCLOSURE_SERVICES is not set
 CONFIG_KERNEL_DEBUGGER_CORE=y
 CONFIG_UID_STAT=y
-CONFIG_SENSORS_BMA150_SPI=y
 # CONFIG_WL127X_RFKILL is not set
+CONFIG_APANIC=y
+CONFIG_APANIC_PLABEL="kpanic"
+CONFIG_SENSORS_BMA150_SPI=y
+# CONFIG_PROXIMITYSENSOR is not set
 # CONFIG_C2PORT is not set
 
 #
 # EEPROM support
 #
 # CONFIG_EEPROM_AT24 is not set
+# CONFIG_EEPROM_AT25 is not set
 # CONFIG_EEPROM_LEGACY is not set
 # CONFIG_EEPROM_93CX6 is not set
 CONFIG_HAVE_IDE=y
@@ -758,6 +833,7 @@ CONFIG_MII=y
 # CONFIG_AX88796 is not set
 CONFIG_SMC91X=y
 # CONFIG_DM9000 is not set
+# CONFIG_ENC28J60 is not set
 # CONFIG_SMC911X is not set
 # CONFIG_SMSC911X is not set
 # CONFIG_DNET is not set
@@ -782,11 +858,6 @@ CONFIG_BCM4329=m
 CONFIG_BCM4329_SOFTAP=y
 CONFIG_BCM4329_FW_PATH="/system/etc/firmware/fw_bcm4329.bin"
 CONFIG_BCM4329_NVRAM_PATH="/proc/calibration"
-
-#
-# Enable WiMAX (Networking options) to see the WiMAX drivers
-CONFIG_WIMAX_SQN=m
-#
 # CONFIG_WAN is not set
 CONFIG_PPP=y
 # CONFIG_PPP_MULTILINK is not set
@@ -834,6 +905,7 @@ CONFIG_INPUT_KEYRESET=y
 # CONFIG_INPUT_TABLET is not set
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_ATMEL=y
+# CONFIG_TOUCHSCREEN_ADS7846 is not set
 # CONFIG_TOUCHSCREEN_CYPRESS_TMG is not set
 # CONFIG_TOUCHSCREEN_FUJITSU is not set
 # CONFIG_TOUCHSCREEN_GUNZE is not set
@@ -847,6 +919,9 @@ CONFIG_TOUCHSCREEN_ATMEL=y
 # CONFIG_TOUCHSCREEN_MSM is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_T1007 is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_T1021 is not set
+# CONFIG_TOUCHSCREEN_MELFAS_I2C is not set
+# CONFIG_TOUCHSCREEN_CY8CTST110 is not set
 # CONFIG_TOUCHSCREEN_TOUCHRIGHT is not set
 # CONFIG_TOUCHSCREEN_TOUCHWIN is not set
 # CONFIG_TOUCHSCREEN_USB_COMPOSITE is not set
@@ -862,11 +937,10 @@ CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
 CONFIG_INPUT_KEYCHORD=y
-#CONFIG_INPUT_OPTICALJOYSTICK is not set
-#CONFIG_OPTICALJOYSTICK_CRUCIAL is not set
-# CONFIG_PROXIMITYSENSOR is not set
 CONFIG_INPUT_DUMMY_KEYPAD=y
-CONFIG_FLASHLIGHT=y
+CONFIG_LIGHTSENSOR_MICROP=y
+CONFIG_INPUT_CAPELLA_CM3602=y
+# CONFIG_INPUT_OPTICALJOYSTICK is not set
 
 #
 # Hardware I/O ports
@@ -891,7 +965,6 @@ CONFIG_FLASHLIGHT=y
 # Non-8250 serial port support
 #
 CONFIG_SERIAL_CORE=y
-# CONFIG_SERIAL_CORE_CONSOLE is not set
 CONFIG_SERIAL_MSM=y
 # CONFIG_SERIAL_MSM_CONSOLE is not set
 # CONFIG_SERIAL_MSM_CLOCK_CONTROL is not set
@@ -939,6 +1012,7 @@ CONFIG_I2C_MSM=y
 #
 # Miscellaneous I2C Chip support
 #
+# CONFIG_ATMEGA_MICROP is not set
 # CONFIG_DS1682 is not set
 # CONFIG_SENSORS_PCF8574 is not set
 # CONFIG_PCF8575 is not set
@@ -948,11 +1022,14 @@ CONFIG_I2C_MSM=y
 # CONFIG_SENSORS_TSL2550 is not set
 # CONFIG_SENSORS_AKM8976 is not set
 CONFIG_SENSORS_AKM8973=y
+# CONFIG_SENSORS_AKM8975 is not set
+# CONFIG_SENSORS_BMA150 is not set
 # CONFIG_SENSORS_PCA963X is not set
 # CONFIG_SENSORS_MT9T013 is not set
-CONFIG_AMP_TPA2018D1=y
-CONFIG_AMP_TPA6130A=y
 CONFIG_VP_A1026=y
+# CONFIG_MICROP_I2C is not set
+CONFIG_AMP_TPA6130A=y
+CONFIG_AMP_TPA2018D1=y
 CONFIG_SMB329=y
 CONFIG_TPS65200=y
 # CONFIG_I2C_DEBUG_CORE is not set
@@ -960,10 +1037,21 @@ CONFIG_TPS65200=y
 # CONFIG_I2C_DEBUG_BUS is not set
 # CONFIG_I2C_DEBUG_CHIP is not set
 CONFIG_SPI=y
+# CONFIG_SPI_DEBUG is not set
 CONFIG_SPI_MASTER=y
-#CONFIG_SPI_QSD=y
 
+#
+# SPI Master Controller Drivers
+#
+# CONFIG_SPI_BITBANG is not set
+# CONFIG_SPI_GPIO is not set
+CONFIG_SPI_QSD=y
 
+#
+# SPI Protocol Masters
+#
+# CONFIG_SPI_SPIDEV is not set
+# CONFIG_SPI_TLE62X0 is not set
 # CONFIG_W1 is not set
 CONFIG_POWER_SUPPLY=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
@@ -1042,20 +1130,13 @@ CONFIG_MSM_CAMERA=y
 #
 # Camera Sensor Selection
 #
-CONFIG_MSM_CAMERA_FLASH=y
 # CONFIG_MT9T013 is not set
 # CONFIG_MT9D112 is not set
 # CONFIG_MT9P012 is not set
-# CONFIG_MSM_CAMERA_AF_FOXCONN is not set
-# CONFIG_MSM_CAMERA_AF_BAM is not set
 # CONFIG_S5K3E2FX is not set
-# CONFIG_VB6801 is not set
-CONFIG_OV9665=y
+# CONFIG_S5K4E1GX is not set
 CONFIG_OV8810=y
-
-#
-# Camera Sensor Selection
-#
+CONFIG_OV9665=y
 CONFIG_RADIO_ADAPTERS=y
 # CONFIG_RADIO_TEA5764 is not set
 # CONFIG_DAB is not set
@@ -1066,7 +1147,6 @@ CONFIG_RADIO_ADAPTERS=y
 # CONFIG_VGASTATE is not set
 CONFIG_VIDEO_OUTPUT_CONTROL=y
 CONFIG_FB=y
-CONFIG_FB_MSM_TVOUT=n
 # CONFIG_FIRMWARE_EDID is not set
 # CONFIG_FB_DDC is not set
 # CONFIG_FB_BOOT_VESA_SUPPORT is not set
@@ -1093,11 +1173,12 @@ CONFIG_FB_CFB_IMAGEBLIT=y
 # CONFIG_FB_METRONOME is not set
 # CONFIG_FB_MB862XX is not set
 CONFIG_FB_MSM=y
-CONFIG_FB_565=y
 CONFIG_FB_MSM_LCDC=y
+# CONFIG_FB_MSM_TVOUT is not set
 CONFIG_GPU_MSM_KGSL=y
 CONFIG_MSM_KGSL_MMU=y
-CONFIG_MSM_HDMI=y
+# CONFIG_MSM_KGSL_PER_FD_PAGETABLE is not set
+CONFIG_FB_565=y
 # CONFIG_BACKLIGHT_LCD_SUPPORT is not set
 
 #
@@ -1152,12 +1233,13 @@ CONFIG_USB_FUNCTION_MASS_STORAGE=y
 CONFIG_USB_FUNCTION_DIAG=y
 CONFIG_USB_FUNCTION_ETHER=y
 CONFIG_USB_FUNCTION_RNDIS=y
+# CONFIG_USB_FUNCTION_FSYNC is not set
+# CONFIG_USB_FUNCTION_SERIAL is not set
+# CONFIG_USB_FUNCTION_MTP_TUNNEL is not set
 CONFIG_USB_FUNCTION_MODEM=y
-CONFIG_USB_FUNCTION_PROJECTOR=y
+# CONFIG_USB_BYPASS_VBUS_NOTIFY is not set
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
-# Andrew 0224
-#CONFIG_MMC_DEBUG=y
 CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMC_EMBEDDED_SDIO=y
 CONFIG_MMC_PARANOID_SD_INIT=y
@@ -1167,23 +1249,24 @@ CONFIG_MMC_PARANOID_SD_INIT=y
 #
 CONFIG_MMC_BLOCK=y
 # CONFIG_MMC_BLOCK_BOUNCE is not set
-CONFIG_MMC_BLOCK_PARANOID_RESUME=y
+CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
 # CONFIG_SDIO_UART is not set
 # CONFIG_MMC_TEST is not set
-CONFIG_MMC_BUSCLK_PWRSAVE=y
-CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
+# CONFIG_MMC_SDIO_EMAPI is not set
+# CONFIG_MMC_TI_SDIO_ADAPT is not set
 
 #
 # MMC/SD/SDIO Host Controller Drivers
 #
 # CONFIG_MMC_SDHCI is not set
+# CONFIG_MMC_SPI is not set
 CONFIG_MMC_MSM7X00A=y
 # CONFIG_MMC_MSM7X00A_RESUME_IN_WQ is not set
+# CONFIG_MMC_BLOCK_PROG_ENA is not set
 # CONFIG_MEMSTICK is not set
 # CONFIG_ACCESSIBILITY is not set
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
-CONFIG_MMC_BLOCK_PROG_ENA=y
 
 #
 # LED drivers
@@ -1192,7 +1275,6 @@ CONFIG_MMC_BLOCK_PROG_ENA=y
 CONFIG_LEDS_GPIO=y
 CONFIG_LEDS_CPLD=y
 # CONFIG_LEDS_PCA955X is not set
-CONFIG_FLASHLIGHT=y
 
 #
 # LED Triggers
@@ -1218,6 +1300,7 @@ CONFIG_RTC_HCTOSYS_DEVICE="rtc0"
 # CONFIG_RTC_INTF_PROC is not set
 # CONFIG_RTC_INTF_DEV is not set
 CONFIG_RTC_INTF_ALARM=y
+CONFIG_RTC_INTF_ALARM_DEV=y
 # CONFIG_RTC_DRV_TEST is not set
 
 #
@@ -1240,6 +1323,13 @@ CONFIG_RTC_INTF_ALARM=y
 #
 # SPI RTC drivers
 #
+# CONFIG_RTC_DRV_M41T94 is not set
+# CONFIG_RTC_DRV_DS1305 is not set
+# CONFIG_RTC_DRV_DS1390 is not set
+# CONFIG_RTC_DRV_MAX6902 is not set
+# CONFIG_RTC_DRV_R9701 is not set
+# CONFIG_RTC_DRV_RS5C348 is not set
+# CONFIG_RTC_DRV_DS3234 is not set
 
 #
 # Platform RTC drivers
@@ -1291,9 +1381,8 @@ CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_POLYNOMIAL=0x11d
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
+# CONFIG_ANDROID_LOW_MEMORY_KILLER_CHECK_FILE_PAGES is not set
 # CONFIG_BTPORT is not set
-# CONFIG_BTPORT_DRV is not set
-
 
 #
 # File systems
@@ -1371,6 +1460,7 @@ CONFIG_YAFFS_AUTO_YAFFS2=y
 # CONFIG_YAFFS_DISABLE_WIDE_TNODES is not set
 # CONFIG_YAFFS_ALWAYS_CHECK_CHUNK_ERASED is not set
 CONFIG_YAFFS_SHORT_NAMES_IN_RAM=y
+# CONFIG_YAFFS_EMPTY_LOST_AND_FOUND is not set
 # CONFIG_JFFS2_FS is not set
 # CONFIG_CRAMFS is not set
 # CONFIG_SQUASHFS is not set
@@ -1458,8 +1548,7 @@ CONFIG_SCHED_DEBUG=y
 CONFIG_SCHEDSTATS=y
 CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_OBJECTS is not set
-#CONFIG_DEBUG_SLAB is not set
-#CONFIG_DEBUG_SLAB_LEAK is not set
+# CONFIG_DEBUG_SLAB is not set
 CONFIG_DEBUG_PREEMPT=y
 # CONFIG_DEBUG_RT_MUTEXES is not set
 # CONFIG_RT_MUTEX_TESTER is not set
@@ -1508,7 +1597,6 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_DEBUG_ERRORS is not set
 # CONFIG_DEBUG_STACK_USAGE is not set
 # CONFIG_DEBUG_LL is not set
-# CONFIG_DEBUG_ICEDCC is not set
 
 #
 # Security options
@@ -1604,7 +1692,7 @@ CONFIG_CRYPTO_TWOFISH_COMMON=y
 #
 # Compression
 #
-# CONFIG_CRYPTO_DEFLATE is not set
+CONFIG_CRYPTO_DEFLATE=y
 # CONFIG_CRYPTO_LZO is not set
 
 #
@@ -1631,6 +1719,10 @@ CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_REED_SOLOMON=y
 CONFIG_REED_SOLOMON_ENC8=y
 CONFIG_REED_SOLOMON_DEC8=y
+CONFIG_TEXTSEARCH=y
+CONFIG_TEXTSEARCH_KMP=y
+CONFIG_TEXTSEARCH_BM=y
+CONFIG_TEXTSEARCH_FSM=y
 CONFIG_PLIST=y
 CONFIG_HAS_IOMEM=y
 CONFIG_HAS_IOPORT=y
